--- a/Capstone/Capstone.html
+++ b/Capstone/Capstone.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-<h1>Capstone Publishers</h1>
+<img src="Capstone2.jpg">
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
@@ -23,6 +23,41 @@
 <div class="mySlides" style="text-align: center;"><img src="Capstone3.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Capstone4.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Capstone5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Capstone6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Capstone7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Capstone8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Capstone9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Capstone10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Capstone11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Capstone12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Capstone13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Capstone14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Capstone15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Capstone16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Capstone17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Capstone18.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Capstone19.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Capstone20.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Capstone21.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Capstone22.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Capstone23.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Capstone24.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Capstone25.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Capstone26.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Capstone27.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Capstone28.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Capstone29.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Capstone30.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Capstone31.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Capstone32.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Capstone33.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Capstone34.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Capstone35.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Capstone36.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Capstone37.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Capstone38.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Capstone39.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Capstone40.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -41,36 +76,39 @@ Titles
 <li><a href="Capstone6.jpg">Batman Strikes!</a> (2014)
 <li><a href="Capstone7.jpg">Batman The Brave and the Bold</a> (2012)
 <li><a href="Capstone5.jpg">Billy Blaster: Attack of the Rock Men</a>  (2009)
+<li><a href="Capstone14.jpg">Billy Blaster: Evil Swarm</a> (2009)
+<li><a href="Capstone21.jpg">Billy Blaster: Ice Caves Of Pluto</a> (2009)
+<li><a href="Capstone25.jpg">Billy Blaster: Mind Thief</a> (2009)
+<li><a href="Capstone11.jpg">Billy Blaster: The Cryptic Code</a> (2009)
+<li><a href="Capstone36.jpg">Billy Blaster: Time Warriors</a> (2009)
+<li><a href="Capstone40.jpg">Billy Blaster: Water Pirates From Outer Space</a> (2009)
 <li><a href="Capstone8.jpg">Bram Stoker's Dracula</a> (2008)
 <li><a href="Capstone9.jpg">Capstone Presents Mr. Puzzle</a> (2013)
 <li><a href="Capstone10.jpg">Courage on the Battlefield: True Stories of Survival in the Military</a> (2016)
-<li><a href="Capstone11.jpg">Cryptic Code</a> (2009)
 <li><a href="Capstone12.jpg">Curse of King Tut's Tomb</a> (2005)
 <li><a href="Capstone13.jpg">Death Camp Uprising: The Escape from Sobibor Concentration Camp</a> (2017)
-<li>Evil Swarm (2009)
-<li>Exploring Titanic: An Isabel Soto History Adventure (2010)
-<li>Far Out Fairy Tales (2016)
-<li>Free Comic Book Day: March Grand Prix (2015)
-<li>George Eastman and the Kodak Camera (2007)
-<li>Gulliver's Travels (2008)
-<li>Hound of the Baskervilles (2009)
-<li>John Henry, Steel-Drivin' Elf (2019)
-<li>Johnny Slimeseed and the Freaky Forest (2019)
-<li>King Arthur and the Knights of the Round Table (2007)
-<li>Outrunning the Nazis: The Brave Escape of Resistance Fighter Sven Somme (2017)
-<li>Paul Bunyan and Babe the Blue Whale (2019)
-<li>Pecos Bill, Monster Wrangler (2019)
-<li>Pope Francis (2017)
-<li>Robin Hood (2007)
-<li>Rockhead &amp; Zinc Alloy 2-For-None! (2012)
-<li>Soccer Showdown: U.S. Women's Stunning 1999 World Cup (2019)
-<li>Superman: Comic Chapter Books (2015)
-<li>Swiss Family Robinson (2009)
-<li>Tell-Tale Heart (2013)
-<li>Time Warriors (2009)
-<li>Treasure Island (2007)
-<li>Tunneling to Freedom: The Great Escape from Stalag Luft III (2017)
-<li>War of the Worlds (2009)
+<li><a href="Capstone15.jpg">Exploring Titanic: An Isabel Soto History Adventure</a> (2010)
+<li><a href="Capstone16.jpg">Far Out Fairy Tales</a> (2016)
+<li><a href="Capstone17.jpg">Free Comic Book Day: March Grand Prix</a> (2015)
+<li><a href="Capstone18.jpg">George Eastman and the Kodak Camera</a> (2007)
+<li><a href="Capstone19.jpg">Gulliver's Travels</a> (2008)
+<li><a href="Capstone20.jpg">Hound of the Baskervilles</a> (2009)
+<li><a href="Capstone22.jpg">John Henry, Steel-Drivin' Elf</a> (2019)
+<li><a href="Capstone23.jpg">King Arthur and the Knights of the Round Table</a> (2007)
+<li><a href="Capstone24.jpg">Midsummer Night's Dream</a> (2012)
+<li><a href="Capstone26.jpg">Outrunning the Nazis: The Brave Escape of Resistance Fighter Sven Somme</a> (2017)
+<li><a href="Capstone27.jpg">Paul Bunyan and Babe the Blue Whale</a> (2019)
+<li><a href="Capstone28.jpg">Pecos Bill, Monster Wrangler</a> (2019)
+<li><a href="Capstone29.jpg">Pope Francis</a> (2017)
+<li><a href="Capstone30.jpg">Robin Hood</a> (2007)
+<li><a href="Capstone31.jpg">Rockhead &amp; Zinc Alloy 2-For-None!</a> (2012)
+<li><a href="Capstone32.jpg">Soccer Showdown: U.S. Women's Stunning 1999 World Cup</a> (2019)
+<li><a href="Capstone33.jpg">Superman: Comic Chapter Books</a> (2015)
+<li><a href="Capstone34.jpg">Swiss Family Robinson</a> (2009)
+<li><a href="Capstone35.jpg">Tell-Tale Heart</a> (2013)
+<li><a href="Capstone37.jpg">Treasure Island</a> (2007)
+<li><a href="Capstone38.jpg">Tunneling to Freedom: The Great Escape from Stalag Luft III</a> (2017)
+<li><a href="Capstone39.jpg">War of the Worlds</a> (2009)
 </p>
 
 </body>
