--- a/index.html
+++ b/index.html
@@ -1416,6 +1416,13 @@
 </tr>
 
 <tr>
+<td>20,000 Leagues Under The Sea</td>
+<td>2008</td>
+<td>Capstone</td>
+<td><a href="Capstone/Capstone.html">Details</a></td>
+</tr>
+
+<tr>
 <td>!Gag!</td>
 <td>1987</td>
 <td>Harrier</td>
@@ -2936,6 +2943,13 @@
 </tr>
 
 <tr>
+<td>Adventures Of Jellaby</td>
+<td>2014</td>
+<td>Capstone</td>
+<td><a href="Capstone/Capstone.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Adventures Of Jodelle</td>
 <td>2013</td>
 <td>Fantagraphics</td>
@@ -3146,13 +3160,6 @@
 </tr>
 
 <tr>
-<td>Adventures On The Fringe</td>
-<td>1992</td>
-<td>Fantagraphics</td>
-<td><a href="Fantagraphics/Fantagraphics.html">Details</a></td>
-</tr>
-
-<tr>
 <td>Adventures Of The Jaguar</td>
 <td>1961</td>
 <td>Archie</td>
@@ -3195,10 +3202,24 @@
 </tr>
 
 <tr>
+<td>Adventures On The Fringe</td>
+<td>1992</td>
+<td>Fantagraphics</td>
+<td><a href="Fantagraphics/Fantagraphics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Adventures On The Planet Of The Apes</td>
 <td>1975</td>
 <td>Marvel</td>
 <td><a href="AdventuresOnThePOTA/adventuresonthepota.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Adventures Of Tom Sawyer</td>
+<td>2007</td>
+<td>Capstone</td>
+<td><a href="Capstone/Capstone.html">Details</a></td>
 </tr>
 
 <tr>
@@ -4344,6 +4365,13 @@
 <td>1958</td>
 <td>Accepted</td>
 <td><a href="Accepted/Accepted.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Ali Baba And The Forty Thieves</td>
+<td>2011</td>
+<td>Capstone</td>
+<td><a href="Capstone/Capstone.html">Details</a></td>
 </tr>
 
 <tr>
@@ -11329,10 +11357,24 @@
 </tr>
 
 <tr>
+<td>Batman Strikes!</td>
+<td>2014</td>
+<td>Capstone</td>
+<td><a href="Capstone/Capstone.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Batman The Animated Series: Plants Of Peril</td>
 <td>1993</td>
 <td>Western</td>
 <td><a href="Western/Western.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Batman The Brave And The Bold</td>
+<td>2012</td>
+<td>Capstone</td>
+<td><a href="Capstone/Capstone.html">Details</a></td>
 </tr>
 
 <tr>
@@ -13759,6 +13801,13 @@
 <td>2020</td>
 <td>AHOY Comics</td>
 <td><a href="AhoyComics/AhoyComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Billy Blaster</td>
+<td>2009</td>
+<td>Capstone</td>
+<td><a href="Capstone/Capstone.html">Details</a></td>
 </tr>
 
 <tr>
@@ -16884,6 +16933,13 @@
 </tr>
 
 <tr>
+<td>Bram Stoker's Dracula</td>
+<td>2008</td>
+<td>Capstone</td>
+<td><a href="Capstone/Capstone.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Brand Echh</td>
 <td>1967</td>
 <td>Marvel</td>
@@ -18876,6 +18932,13 @@
 <td>2007</td>
 <td>Oni</td>
 <td><a href="OniPress/OniPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Capstone Presents Mr. Puzzle</td>
+<td>2013</td>
+<td>Capstone</td>
+<td><a href="Capstone/Capstone.html">Details</a></td>
 </tr>
 
 <tr>
@@ -24221,6 +24284,13 @@
 </tr>
 
 <tr>
+<td>Courage On The Battlefield: True Stories Of Survival In The Military</td>
+<td>2007</td>
+<td>Capstone</td>
+<td><a href="Capstone/Capstone.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Courageous Princess</td>
 <td>2000</td>
 <td>Antarctic Press</td>
@@ -25694,6 +25764,13 @@
 <td>1998</td>
 <td>Dark Horse</td>
 <td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Curse Of King Tut's Tomb</td>
+<td>2005</td>
+<td>Capstone</td>
+<td><a href="Capstone/Capstone.html">Details</a></td>
 </tr>
 
 <tr>
@@ -82747,6 +82824,13 @@
 </tr>
 
 <tr>
+<td>Speed Abater</td>
+<td>2003</td>
+<td>NBM</td>
+<td><a href="NBM/NBM.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Speed Comics</td>
 <td>1939</td>
 <td>Brookwood</td>
@@ -82877,6 +82961,13 @@
 <td>2011</td>
 <td>Moonstone</td>
 <td><a href="Moonstone/Moonstone.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Spider Garden</td>
+<td>1995</td>
+<td>NBM</td>
+<td><a href="NBM/NBM.html">Details</a></td>
 </tr>
 
 <tr>
@@ -84539,6 +84630,13 @@
 </tr>
 
 <tr>
+<td>Stitched</td>
+<td>2017</td>
+<td>NBM</td>
+<td><a href="NBM/NBM.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Stoke</td>
 <td>2018</td>
 <td>Shortbox</td>
@@ -84592,6 +84690,20 @@
 <td>1956</td>
 <td>Atlas</td>
 <td><a href="StoriesOfRomance/StoriesOfRomance.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Stories Of The Fantastic</td>
+<td>1987</td>
+<td>NBM</td>
+<td><a href="NBM/NBM.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Story Of O</td>
+<td>1990</td>
+<td>NBM</td>
+<td><a href="NBM/NBM.html">Details</a></td>
 </tr>
 
 <tr>
@@ -85085,6 +85197,13 @@
 </tr>
 
 <tr>
+<td>Stray Moonbeams</td>
+<td>2002</td>
+<td>NBM</td>
+<td><a href="NBM/NBM.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Stray Toasters</td>
 <td>1988</td>
 <td>Epic</td>
@@ -85096,6 +85215,13 @@
 <td>2016</td>
 <td>Aftershock</td>
 <td><a href="AftershockComics/AftershockComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Streak Of Chalk</td>
+<td>1994</td>
+<td>NBM</td>
+<td><a href="NBM/NBM.html">Details</a></td>
 </tr>
 
 <tr>
@@ -85351,6 +85477,13 @@
 </tr>
 
 <tr>
+<td>Strips 1</td>
+<td>1983</td>
+<td>NBM</td>
+<td><a href="NBM/NBM.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Strongman</td>
 <td>2009</td>
 <td>Slave Labor</td>
@@ -85551,6 +85684,13 @@
 <td>1988</td>
 <td>Renegade</td>
 <td><a href="RenegadePress/RenegadePress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Suburban Nightmares: The Science Experiment</td>
+<td>1990</td>
+<td>NBM</td>
+<td><a href="NBM/NBM.html">Details</a></td>
 </tr>
 
 <tr>
@@ -85761,6 +85901,13 @@
 <td>2007</td>
 <td>Sunday Press</td>
 <td><a href="SundayPressBooks/SundayPressBooks.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Sundiata: A Legend Of Africa</td>
+<td>2003</td>
+<td>NBM</td>
+<td><a href="NBM/NBM.html">Details</a></td>
 </tr>
 
 <tr>
@@ -86296,6 +86443,13 @@
 </tr>
 
 <tr>
+<td>Swarm</td>
+<td>2004</td>
+<td>NBM</td>
+<td><a href="NBM/NBM.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Swashbucklers: The Saga Continues</td>
 <td>2018</td>
 <td>Dynamite</td>
@@ -86328,6 +86482,13 @@
 <td>1994</td>
 <td>Brainstorm</td>
 <td><a href="Brainstorm/Brainstorm.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Sweeties</td>
+<td>2017</td>
+<td>NBM</td>
+<td><a href="NBM/NBM.html">Details</a></td>
 </tr>
 
 <tr>
@@ -86738,6 +86899,20 @@
 </tr>
 
 <tr>
+<td>Tales From The Crypt</td>
+<td>2007</td>
+<td>NBM</td>
+<td><a href="NBM/NBM.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Tales From The Crypt: Graphic Novel</td>
+<td>2007</td>
+<td>NBM</td>
+<td><a href="NBM/NBM.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Tales From The Heart</td>
 <td>1988</td>
 <td>Slave Labor</td>
@@ -87067,6 +87242,20 @@
 </tr>
 
 <tr>
+<td>Tamba, Child Soldier</td>
+<td>2020</td>
+<td>NBM</td>
+<td><a href="NBM/NBM.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Tangents</td>
+<td>1995</td>
+<td>NBM</td>
+<td><a href="NBM/NBM.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Tangram Publishing</td>
 <td>1992</td>
 <td>Publisher</td>
@@ -87162,6 +87351,13 @@
 <td>1984</td>
 <td>Warner Bros</td>
 <td><a href="TarzanOfTheApes/TarzanOfTheApes.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Tarzan In Color</td>
+<td>1992</td>
+<td>NBM</td>
+<td><a href="NBM/NBM.html">Details</a></td>
 </tr>
 
 <tr>
@@ -87717,6 +87913,13 @@
 </tr>
 
 <tr>
+<td>Terrible Axe-Man Of New Orleans</td>
+<td>2010</td>
+<td>NBM</td>
+<td><a href="NBM/NBM.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Terrificolor</td>
 <td>1974</td>
 <td>Elvifrance</td>
@@ -87773,10 +87976,17 @@
 </tr>
 
 <tr>
-<td>Terry And the Pirates Comics</td>
+<td>Terry And the Pirates</td>
 <td>1947</td>
 <td>Harvey</td>
 <td><a href="HarveyComics/HarveyComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Terry And The Pirates</td>
+<td>1984</td>
+<td>NBM</td>
+<td><a href="NBM/NBM.html">Details</a></td>
 </tr>
 
 <tr>
@@ -87945,6 +88155,13 @@
 <td>2007</td>
 <td>AdHouse</td>
 <td><a href="AdHouse/AdHouse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Thea Stilton</td>
+<td>2013</td>
+<td>NBM</td>
+<td><a href="NBM/NBM.html">Details</a></td>
 </tr>
 
 <tr>
@@ -88844,6 +89061,13 @@
 </tr>
 
 <tr>
+<td>To See The Stars: The Urban Adventures Of Giuseppe Bergman</td>
+<td>1998</td>
+<td>NBM</td>
+<td><a href="NBM/NBM.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Toadswart d'Amplestone: A Gothic Tale Of Horror And Magic</td>
 <td>1990</td>
 <td>Eclipse</td>
@@ -89687,6 +89911,13 @@
 </tr>
 
 <tr>
+<td>Treasury Of Victorian Murder</td>
+<td>1987</td>
+<td>NBM</td>
+<td><a href="NBM/NBM.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Trees</td>
 <td>2015</td>
 <td>Image</td>
@@ -89817,6 +90048,13 @@
 <td>2016</td>
 <td>Jessica Abel</td>
 <td><a href="JessicaAbel/JessicaAbel.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Trish Trash: Rollergirl Of Mars</td>
+<td>2019</td>
+<td>NBM</td>
+<td><a href="NBM/NBM.html">Details</a></td>
 </tr>
 
 <tr>
@@ -90272,6 +90510,13 @@
 <td>1962</td>
 <td>Gold Key</td>
 <td><a href="GoldKey/GoldKey.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Turn Of The Screw</td>
+<td>1995</td>
+<td>NBM</td>
+<td><a href="NBM/NBM.html">Details</a></td>
 </tr>
 
 <tr>
@@ -90751,6 +90996,13 @@
 </tr>
 
 <tr>
+<td>Ulysses</td>
+<td>1992</td>
+<td>NBM</td>
+<td><a href="NBM/NBM.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Umbra</td>
 <td>2006</td>
 <td>Image</td>
@@ -91007,6 +91259,13 @@
 <td>2014</td>
 <td>First Second</td>
 <td><a href="FirstSecondBooks/FirstSecondBooks.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Undertow</td>
+<td>1997</td>
+<td>NBM</td>
+<td><a href="NBM/NBM.html">Details</a></td>
 </tr>
 
 <tr>
@@ -91626,6 +91885,13 @@
 </tr>
 
 <tr>
+<td>Uther: The Half Dead King</td>
+<td>1994</td>
+<td>NBM</td>
+<td><a href="NBM/NBM.html">Details</a></td>
+</tr>
+
+<tr>
 <td><a name="v">V for Vendetta</a></td>
 <td>1982</td>
 <td>Vertigo</td>
@@ -91693,6 +91959,13 @@
 <td>2011</td>
 <td>Boom!</td>
 <td><a href="Boom!/Boom!.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Valentina</td>
+<td>1994</td>
+<td>NBM</td>
+<td><a href="NBM/NBM.html">Details</a></td>
 </tr>
 
 <tr>
@@ -92347,6 +92620,13 @@
 </tr>
 
 <tr>
+<td>Verdilak</td>
+<td>1996</td>
+<td>NBM</td>
+<td><a href="NBM/NBM.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Vermillion</td>
 <td>1996</td>
 <td>Helix</td>
@@ -92477,6 +92757,12 @@
 <td>1975</td>
 <td>LQ/LAF</td>
 <td><a href="VicAndBlood/VicAndBlood.html">Details</a></td>
+</tr>
+
+<tr>Vic And Blood: The Chronicles Of A Boy And His Dog</td>
+<td>1989</td>
+<td>NBM</td>
+<td><a href="NBM/NBM.html">Details</a></td>
 </tr>
 
 <tr>
@@ -92978,6 +93264,13 @@
 
 <tr>
 <td>Wake</td>
+<td>2001</td>
+<td>NBM</td>
+<td><a href="NBM/NBM.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Wake</td>
 <td>2013</td>
 <td>Vertigo</td>
 <td><a href="Vertigo/Vertigo.html">Details</a></td>
@@ -93387,6 +93680,13 @@
 <td>1952</td> 
 <td>Avon</td>
 <td><a href="Avon/Avon.html">Details</a></td>
+</tr>
+
+<tr>
+<td>War-Fix</td>
+<td>2006</td>
+<td>NBM</td>
+<td><a href="NBM/NBM.html">Details</a></td>
 </tr>
 
 <tr>
@@ -93889,6 +94189,13 @@
 <td>1924</td>
 <td>NEA</td>
 <td><a href="WashTubbsAndCaptEasy/WashTubbsAndCaptEasy.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Wash Tubbs And Captain Easy</td>
+<td>1987</td>
+<td>NBM</td>
+<td><a href="NBM/NBM.html">Details</a></td>
 </tr>
 
 <tr>
@@ -94964,6 +95271,13 @@
 </tr>
 
 <tr>
+<td>Why I Killed Peter</td>
+<td>2008</td>
+<td>NBM</td>
+<td><a href="NBM/NBM.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Wicked And The Divine</td>
 <td>2014</td>
 <td>Image</td>
@@ -95515,6 +95829,13 @@
 <td>2009</td>
 <td>Slave Labor</td>
 <td><a href="SlaveLabor/SlaveLabor.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Wind In The Willows</td>
+<td>1997</td>
+<td>NBM</td>
+<td><a href="NBM/NBM.html">Details</a></td>
 </tr>
 
 <tr>
@@ -96478,10 +96799,24 @@
 </tr>
 
 <tr>
+<td>WWE: Superstars</td>
+<td>2013</td>
+<td>NBM</td>
+<td><a href="NBM/NBM.html">Details</a></td>
+</tr>
+
+<tr>
 <td>WWE: Then , Now, Forever</td>
 <td>2016</td>
 <td>Boom!</td>
 <td><a href="Boom!/Boom!.html">Details</a></td>
+</tr>
+
+<tr>
+<td>WWW.</td>
+<td>1999</td>
+<td>NBM</td>
+<td><a href="NBM/NBM.html">Details</a></td>
 </tr>
 
 <tr>
@@ -96888,6 +97223,13 @@
 <td>1968</td>
 <td>Print Mint</td>
 <td><a href="YellowDog/YellowDog.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Yellow Jar</td>
+<td>2002</td>
+<td>NBM</td>
+<td><a href="NBM/NBM.html">Details</a></td>
 </tr>
 
 <tr>
@@ -97820,6 +98162,13 @@
 <td>1999</td>
 <td>Image</td>
 <td><a href="Image/image.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Zorro</td>
+<td>2005</td>
+<td>NBM</td>
+<td><a href="NBM/NBM.html">Details</a></td>
 </tr>
 
 <tr>
