--- a/LastGasp/LastGasp.html
+++ b/LastGasp/LastGasp.html
@@ -100,6 +100,7 @@
 <div class="mySlides" style="text-align: center;"><img src="LastGasp80.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="LastGasp81.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="LastGasp82.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LastGasp83.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -125,6 +126,7 @@ Comics:
 <li><a href="../BarefootGen/BarefootGen.html">Barefoot Gen</a> (2004)
 <li><a href="LastGasp37.jpg">Best Buy Comics</a> (1988)
 <li><a href="LastGasp6.jpg">Binky Brown Meets the Holy Virgin Mary</a> (1972)
+<li><a href="LastGasp83.jpg">Blab World</a> (2010)
 <li><a href="LastGasp38.jpg">Blood On The Moon</a> (1978)
 <li><a href="LastGasp81.jpg">Book Of Weirdo</a> (2019)
 <li><a href="LastGasp7.jpg">Brain Fantasy</a> (1972)
