--- a/index.html
+++ b/index.html
@@ -14133,6 +14133,13 @@
 </tr>
 
 <tr>
+<td>Blab World</td>
+<td>2010</td>
+<td>Last Gasp</td>
+<td><a href="LastGasp/LastGasp.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Blaber Blabber Blabber</td>
 <td>2011</td>
 <td>Drawn And Quarterly</td>
@@ -28196,6 +28203,13 @@
 </tr>
 
 <tr>
+<td>Death Camp Uprising: The Escape From Sobibor Concentration Camp</td>
+<td>2017</td>
+<td>Capstone</td>
+<td><a href="Capstone/Capstone.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Death Head</td>
 <td>2016</td>
 <td>Dark Horse</td>
@@ -35074,6 +35088,13 @@
 </tr>
 
 <tr>
+<td>Exploring Titanic: An Isabel Soto History Adventure</td>
+<td>2010</td>
+<td>Capstone</td>
+<td><a href="Capstone/Capstone.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Exposure Second Coming</td>
 <td>2000</td>
 <td>Avatar</td>
@@ -36065,6 +36086,13 @@
 <td>1966</td>
 <td>Marvel</td>
 <td><a href="FantasyMasterpieces/FantasyMasterpieces.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Far Out Fairy Tales</td>
+<td>2016</td>
+<td>Capstone</td>
+<td><a href="Capstone/Capstone.html">Details</a></td>
 </tr>
 
 <tr>
@@ -38838,6 +38866,13 @@
 </tr>
 
 <tr>
+<td>Free Comic Book Day: March Grand Prix</td>
+<td>2015</td>
+<td>Capstone</td>
+<td><a href="Capstone/Capstone.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Free Realms</td>
 <td>2009</td>
 <td>Wildstorm</td>
@@ -40788,6 +40823,13 @@
 <td>1937</td>
 <td>Creator</td>
 <td><a href="GeorgeCarlson/GeorgeCarlson.html">Details</a></td>
+</tr>
+
+<tr>
+<td>George Eastman And The Kodak Camera</td>
+<td>2007</td>
+<td>Capstone</td>
+<td><a href="Capstone/Capstone.html">Details</a></td>
 </tr>
 
 <tr>
@@ -43525,6 +43567,13 @@
 <td>1726</td>
 <td>Jonathan Swift</td>
 <td><a href="GulliversTravels/GulliversTravels.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Gulliver's Travels</td>
+<td>2008</td>
+<td>Capstone</td>
+<td><a href="Capstone/Capstone.html">Details</a></td>
 </tr>
 
 <tr>
@@ -47157,6 +47206,13 @@
 <td>2006</td>
 <td>Fantagraphics</td>
 <td><a href="Fantagraphics/Fantagraphics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Hound Of The Baskervilles</td>
+<td>2009</td>
+<td>Capstone</td>
+<td><a href="Capstone/Capstone.html">Details</a></td>
 </tr>
 
 <tr>
@@ -51171,6 +51227,13 @@
 </tr>
 
 <tr>
+<td>John Henry: Steel-Drivin' Elf</td>
+<td>2019</td>
+<td>Capstone</td>
+<td><a href="Capstone/Capstone.html">Details</a></td>
+</tr>
+
+<tr>
 <td>John Henry: The Steam Age</td>
 <td>2012</td>
 <td>Arcana</td>
@@ -53260,6 +53323,13 @@
 <td>1993</td>
 <td>Marvel</td>
 <td><a href="https:/blzimg.github.io/KingArthurKJ/KingArthurKJ.html">Details</a></td>
+</tr>
+
+<tr>
+<td>King Arthur And The Knights Of The Round Table</td>
+<td>2007</td>
+<td>Capstone</td>
+<td><a href="Capstone/Capstone.html">Details</a></td>
 </tr>
 
 <tr>
@@ -62046,6 +62116,13 @@
 </tr>
 
 <tr>
+<td>Midsummer Night's Dream</td>
+<td>2012</td>
+<td>Capstone</td>
+<td><a href="Capstone/Capstone.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Midvale</a>
 <td>1990</td>
 <td>MU Press</td>
@@ -68610,6 +68687,13 @@
 </tr>
 
 <tr>
+<td>Outrunning The Nazis: The Brave Escape Of Resistance Fighter Sven Somme</td>
+<td>2017</td>
+<td>Capstone</td>
+<td><a href="Capstone/Capstone.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Outside In</a>
 <td>1987</td>
 <td>MU Press</td>
@@ -69373,6 +69457,13 @@
 </tr>
 
 <tr>
+<td>Paul Bunyan And Babe The Blue Whale</td>
+<td>2019</td>
+<td>Capstone</td>
+<td><a href="Capstone/Capstone.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Paul Gulacy</td>
 <td>1953</td>
 <td>Creator</td>
@@ -69538,6 +69629,13 @@
 <td>1993</td>
 <td>Harvey</td>
 <td><a href="HarveyComics/HarveyComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Pecos Bill, Monster Wrangler</td>
+<td>2019</td>
+<td>Capstone</td>
+<td><a href="Capstone/Capstone.html">Details</a></td>
 </tr>
 
 <tr>
@@ -71404,6 +71502,13 @@
 <td>2005</td>
 <td>IDW</td>
 <td><a href="IDW/IDW.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Pope Francis</td>
+<td>2017</td>
+<td>Capstone</td>
+<td><a href="Capstone/Capstone.html">Details</a></td>
 </tr>
 
 <tr>
@@ -75816,6 +75921,13 @@
 </tr>
 
 <tr>
+<td>Robin Hood</td>
+<td>2007</td>
+<td>Capstone</td>
+<td><a href="Capstone/Capstone.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Robin Hood And His Merry Men</td>
 <td>1956</td>
 <td>Charlton</td>
@@ -76247,6 +76359,13 @@
 <td>2005</td>
 <td>Image</td>
 <td><a href="Image/image.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Rockhead And Zinc Allow 2-For-None!</td>
+<td>2012</td>
+<td>Capstone</td>
+<td><a href="Capstone/Capstone.html">Details</a></td>
 </tr>
 
 <tr>
@@ -81970,6 +82089,13 @@
 </tr>
 
 <tr>
+<td>Soccer Showdown: U.S. Women's Stunning 1999 World Cup</td>
+<td>2019</td>
+<td>Capstone</td>
+<td><a href="Capstone/Capstone.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Society Is Nix: Gleeful Anarchy At The Dawn Of The American Comic Strip</td>
 <td>2013</td>
 <td>Sunday Press</td>
@@ -86240,6 +86366,13 @@
 </tr>
 
 <tr>
+<td>Superman: Comic Chapter Books</td>
+<td>2015</td>
+<td>Capstone</td>
+<td><a href="Capstone/Capstone.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Supermarket</td>
 <td>2006</td>
 <td>IDW</td>
@@ -86552,6 +86685,13 @@
 <td>1986</td>
 <td>Harrier</td>
 <td><a href="HarrierComics/HarrierComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Swiss Family Robinson</td>
+<td>2009</td>
+<td>Capstone</td>
+<td><a href="Capstone/Capstone.html">Details</a></td>
 </tr>
 
 <tr>
@@ -87665,6 +87805,13 @@
 <td>1950</td>
 <td>Avon</td>
 <td><a href="Avon/Avon.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Tell-Tale Heart</td>
+<td>2013</td>
+<td>Capstone</td>
+<td><a href="Capstone/Capstone.html">Details</a></td>
 </tr>
 
 <tr>
@@ -89911,6 +90058,13 @@
 </tr>
 
 <tr>
+<td>Treasure Island</td>
+<td>2007</td>
+<td>Capstone</td>
+<td><a href="Capstone/Capstone.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Treasury Of Victorian Murder</td>
 <td>1987</td>
 <td>NBM</td>
@@ -90447,6 +90601,13 @@
 <td>2012</td>
 <td>First Second</td>
 <td><a href="FirstSecondBooks/FirstSecondBooks.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Tunneling To Freedom: The Great Escape From Stalag Luft III</td>
+<td>2017</td>
+<td>Capstone</td>
+<td><a href="Capstone/Capstone.html">Details</a></td>
 </tr>
 
 <tr>
@@ -93757,6 +93918,13 @@
 <td>1996</td>
 <td>Caliber</td>
 <td><a href="CaliberComics/CaliberComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>War Of The Worlds</td>
+<td>2009</td>
+<td>Capstone</td>
+<td><a href="Capstone/Capstone.html">Details</a></td>
 </tr>
 
 <tr>
