--- a/index.html
+++ b/index.html
@@ -2321,6 +2321,13 @@
 </tr>
 
 <tr>
+<td>Action Comics</td>
+<td>1950</td>
+<td>Publisher</td>
+<td><a href="ActionComics/ActionComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Action Force</td>
 <td>1987</td>
 <td>Marvel</td>
@@ -4967,6 +4974,13 @@
 <td>1967</td>
 <td>Charlton</td>
 <td><a href="Charlton/Charlton.html">Details</a></td>
+</tr>
+
+<tr>
+<td>All Famous Police Cases</td>
+<td>1950</td>
+<td>Action</td>
+<td><a href="ActionComics/ActionComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -25047,6 +25061,13 @@
 </tr>
 
 <tr>
+<td>Crimson Comet</td>
+<td>1955</td>
+<td>Action</td>
+<td><a href="ActionComics/ActionComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Crimson Cougar</td>
 <td>1989</td>
 <td>Greater Mercury</td>
@@ -26720,10 +26741,24 @@
 </tr>
 
 <tr>
+<td>Darling Love Comics</td>
+<td>1950</td>
+<td>Action</td>
+<td><a href="ActionComics/ActionComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Daring Love Stories</td>
 <td>1950</td>
 <td>Fox Comics</td>
 <td><a href="FoxPublications/FoxPublications.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Darling Romance Comics</td>
+<td>1950</td>
+<td>Action</td>
+<td><a href="ActionComics/ActionComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -37044,6 +37079,13 @@
 <td>2017</td>
 <td>Knockabout</td>
 <td><a href="Knockabout/Knockabout.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Fight</td>
+<td>1954</td>
+<td>Action</td>
+<td><a href="ActionComics/ActionComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -48487,6 +48529,13 @@
 <td>1990</td>
 <td>Marvel</td>
 <td><a href="ImpossibleMan/ImpossibleMan.html">Details</a></td>
+</tr>
+
+<tr>
+<td>In Love</td>
+<td>1950</td>
+<td>Action</td>
+<td><a href="ActionComics/ActionComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -76656,6 +76705,13 @@
 </tr>
 
 <tr>
+<td>Romantic Hearts</td>
+<td>1950</td>
+<td>Action</td>
+<td><a href="ActionComics/ActionComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Romantic Love</td>
 <td>1949</td>
 <td>Avon</td>
@@ -88911,6 +88967,13 @@
 <td>1975</td>
 <td>Creator</td>
 <td><a href="TimTyler/TimTyler.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Tim Valour</td>
+<td>1950</td>
+<td>Action</td>
+<td><a href="ActionComics/ActionComics.html">Details</a></td>
 </tr>
 
 <tr>
