--- a/index.html
+++ b/index.html
@@ -2363,6 +2363,13 @@
 </tr>
 
 <tr>
+<td>Action Planet Comics</td>
+<td>1995</td>
+<td>Publisher</td>
+<td><a href="ActionPlanetComics/ActionPlanetComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Action Time Buddies</td>
 <td>2013</td>
 <td>Antarctic Press</td>
@@ -47216,6 +47223,13 @@
 </tr>
 
 <tr>
+<td>Hot Twisted Love</td>
+<td>1999</td>
+<td>Action Planet</td>
+<td><a href="ActionPlanetComics/ActionPlanetComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Hot Works: The Best Of One-Fisted Tales</td>
 <td>1993</td>
 <td>Slave Labor</td>
@@ -63331,6 +63345,13 @@
 <td>2001</td>
 <td>Wildstorm</td>
 <td><a href="WildstormProductions/WildstormProductions.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Monsterman</td>
+<td>1999</td>
+<td>Action Planet</td>
+<td><a href="ActionPlanetComics/ActionPlanetComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -91588,6 +91609,13 @@
 <td>1979</td>
 <td>Abbeville</td>
 <td><a href="AbbevillePress/AbbevillePress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Uncle Slam And Fire Dog</td>
+<td>1997</td>
+<td>Action Planet</td>
+<td><a href="ActionPlanetComics/ActionPlanetComics.html">Details</a></td>
 </tr>
 
 <tr>
