--- a/index.html
+++ b/index.html
@@ -39770,7 +39770,7 @@
 
 <tr>
 <td><a name="g">G.F.F.s: Ghost Friends Forever</td>
-</td>2018</td>
+<td>2018</td>
 <td>NBM</td>
 <td><a href="NBM/NBM.html">Details</a></td>
 </tr>
@@ -93011,7 +93011,8 @@
 <td><a href="VicAndBlood/VicAndBlood.html">Details</a></td>
 </tr>
 
-<tr>Vic And Blood: The Chronicles Of A Boy And His Dog</td>
+<tr>
+<td>Vic And Blood: The Chronicles Of A Boy And His Dog</td>
 <td>1989</td>
 <td>NBM</td>
 <td><a href="NBM/NBM.html">Details</a></td>
