--- a/Fukitor/Fukitor.html
+++ b/Fukitor/Fukitor.html
@@ -45,10 +45,16 @@
 <div class="mySlides" style="text-align: center;"><img src="Fukitor25.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Fukitor26.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Fukitor27.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fukitor28.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fukitor29.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fukitor30.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fukitor31.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
+</p><p>
+Websites: <a href="https://fukitorblog.blogspot.com">Fukitorblog.blogspot.com</a> and <a href="https://www.facebook.com/fukitor.comix.7">Facebook.com/fukitor.comix.7</a>
 </p><p>
 Released in 2017, Jason Karns’ Fukitor is an attack of a different kind: reprinted from the artist’s self-published zine, the book is a 144 page compilation of full color comics that reside uneasily between a straight and satirical response to the violence, xenophobia, and sexual and racial stereotypes found in pop culture. Fantagraphics launched its FU imprint, which, according to the press release, is designed to "publish books and print projects appealing to a smaller, more rarefied readership." FU will publish small runs of unusual books, and will make those books available to select stores and at the ever-growing number of festivals around the country. Fukator is the first book of the imprint. 
 </p>
