--- a/IDW/IDW.html
+++ b/IDW/IDW.html
@@ -366,6 +366,9 @@
 <div class="mySlides" style="text-align: center;"><img src="IDW345.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="IDW346.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="IDW347.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="IDW348.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="IDW349.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="IDW350.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -448,6 +451,7 @@ In 2016, IDW launched the Hasbro Reconstruction initiative to present a shared u
 <li><a href="IDW50.jpg">Berkeley Breathed's Opus: Sunday Comics 2003-2008</a> (2012)
 <li><a href="IDW51.jpg">Beyond Mars</a> (2015)
 <li><a href="IDW52.jpg">Bible: Eden</a> (2010)
+<li><a href="IDW350.jpg">Bigfoot</a> (2005) 
 <li><a href="IDW53.jpg">Bigger Bang</a> (2014)
 <li><a href="IDW54.jpg">Black Crown Quarterly</a> (2017)
 <li><a href="IDW55.jpg">Black Dynamite</a> (2013)
@@ -571,7 +575,7 @@ In 2016, IDW launched the Hasbro Reconstruction initiative to present a shared u
 <li><a href="IDW171.jpg">Graham Ingles' EC Stories Artists Edition</a> (2016)
 <li><a href="IDW172.jpg">Grimjack: Killer Instinct</a> (2005) 
 <li><a href="IDW173.jpg">Grimjack: The Manx Cat</a> (2009) 
-<li><a href="IDW348.jpg">Grimmwood's Daughter</a> (2009)
+<li><a href="IDW348.jpg">Grimwood's Daughter</a> (2009)
 <li><a href="IDW174.jpg">Groom Lake</a> (2009) 
 <li><a href="IDW175.jpg">Grumpy Old Monsters</a> (2003) 
 <li><a href="IDW176.jpg">Gutter Magic</a> (2016)
@@ -755,6 +759,7 @@ In 2016, IDW launched the Hasbro Reconstruction initiative to present a shared u
 <li><a href="IDW345.jpg">Yakuza Demon Killers</a> (2016) 
 <li><a href="IDW346.jpg">Zombies! Eclipse of the Undead</a> (2006) 
 <li><a href="IDW347.jpg">Zombies! Feast</a> (2006) 
+
 </p>
 
 </body>
