--- a/index.html
+++ b/index.html
@@ -6987,6 +6987,13 @@
 
 <tr>
 <td>Animal Mystic</td>
+<td>1993</td>
+<td>CFD</td>
+<td><a href="CryForDawn/CryForDawn.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Animal Mystic</td>
 <td>1994</td>
 <td>Sirius</td>
 <td><a href="SiriusEntertainment/SiriusEntertainment.html">Details</a></td>
@@ -25558,6 +25565,20 @@
 </tr>
 
 <tr>
+<td>Cry For Dawn</td>
+<td>1989</td>
+<td>CFD</td>
+<td><a href="CryForDawn/CryForDawn.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Cry For Dawn Productions</td>
+<td>1989</td>
+<td>Publisher</td>
+<td><a href="CryForDawn/CryForDawn.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Crying Freeman</td>
 <td>1989</td>
 <td>Viz</td>
@@ -26286,6 +26307,13 @@
 </tr>
 
 <tr>
+<td>Daimons</td>
+<td>1993</td>
+<td>CFD</td>
+<td><a href="CryForDawn/CryForDawn.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Daisy And Her Pups Comics</td>
 <td>1951</td>
 <td>Harvey</td>
@@ -26535,6 +26563,13 @@
 <td>2019</td>
 <td>Action Lab</td>
 <td><a href="ActionLab/ActionLab.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Danger Funnies</td>
+<td>1993</td>
+<td>CFD</td>
+<td><a href="CryForDawn/CryForDawn.html">Details</a></td>
 </tr>
 
 <tr>
@@ -35060,6 +35095,13 @@
 </tr>
 
 <tr>
+<td>Exotica</td>
+<td>1993</td>
+<td>CFD</td>
+<td><a href="CryForDawn/CryForDawn.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Exosquad</td>
 <td>1994</td>
 <td>Topps</td>
@@ -39265,6 +39307,13 @@
 </tr>
 
 <tr>
+<td>From the Darkness: Blood Vows</td>
+<td>1992</td>
+<td>CFD</td>
+<td><a href="CryForDawn/CryForDawn.html">Details</a></td>
+</tr>
+
+<tr>
 <td>From The Earth to The Moon</td>
 <td>1863</td>
 <td>Jules Vern</td>
@@ -41628,6 +41677,13 @@
 <td>2012</td>
 <td>Vertigo</td>
 <td><a href="Vertigo/Vertigo.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Girls: The Rule Of Darkness</td>
+<td>1992</td>
+<td>CFD</td>
+<td><a href="CryForDawn/CryForDawn.html">Details</a></td>
 </tr>
 
 <tr>
@@ -52812,6 +52868,13 @@
 <td>2005</td>
 <td>MU Press</td>
 <td><a href="MUPress/MUPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Keith Pollard</td>
+<td>1950</td>
+<td>Creator</td>
+<td><a href="KeithPollard/KeithPollard.html">Details</a></td>
 </tr>
 
 <tr>
@@ -67763,6 +67826,13 @@
 </tr>
 
 <tr>
+<td>Offerings</td>
+<td>1993</td>
+<td>CFD</td>
+<td><a href="CryForDawn/CryForDawn.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Official Handbook Of The Marvel Universe</td>
 <td>1982</td>
 <td>Marvel</td>
@@ -77496,6 +77566,13 @@
 
 <tr>
 <td>Safety-Belt Man</td>
+<td>1993</td>
+<td>CFD</td>
+<td><a href="CryForDawn/CryForDawn.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Safety-Belt Man</td>
 <td>1994</td>
 <td>Sirius</td>
 <td><a href="SiriusEntertainment/SiriusEntertainment.html">Details</a></td>
@@ -85859,6 +85936,13 @@
 <td>1989</td>
 <td>4 Winds</td>
 <td><a href="4WindsPublishing/4WindsPublishing.html">Details</a></td> 
+</tr>
+
+<tr>
+<td>Subtle Violents</td>
+<td>1991</td>
+<td>CFD</td>
+<td><a href="CryForDawn/CryForDawn.html">Details</a></td>
 </tr>
 
 <tr>
@@ -97462,6 +97546,20 @@
 <td>1991</td>
 <td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Yeah!</td>
+<td>1999</td>
+<td>DC</td>
+<td><a href="DCComics/DCComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Yeah!</td>
+<td>2011</td>
+<td>Fantagraphics</td>
+<td><a href="Fantagraphics/Fantagraphics.html">Details</a></td>
 </tr>
 
 <tr>
