--- a/DCComics/DCComics.html
+++ b/DCComics/DCComics.html
@@ -233,6 +233,7 @@
 <div class="mySlides" style="text-align: center;"><img src="DC213.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="DC214.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="DC215.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DC216.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -584,6 +585,7 @@ Titles
 <li><a href="DC65.jpg">Wonder Woman: Come Back to Me</a> (2020) 
 <li><a href="DC128.jpg">World's Best</a> (1941)
 <li><a href="DC129.jpg">World's Finest</a> (1941)
+<li><a href="DC216.jpg">Yeah!</a> (1999)
 <li><a href="DC35.jpg">Young Justice</a> (2019)
 <li><a href="DC93.jpg">Young Heroes In Love</a> (1997)
 <li><a href="../Zatanna/Zatanna.html">Zatanna</a> (1993) 	 	
