--- a/Fantagraphics/Fantagraphics.html
+++ b/Fantagraphics/Fantagraphics.html
@@ -447,6 +447,7 @@
 <div class="mySlides" style="text-align: center;"><img src="Fantagraphics424.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Fantagraphics425.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Fantagraphics426.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fantagraphics427.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -929,6 +930,7 @@ Titles
 <li><a href="Fantagraphics137.jpg">Worn Tuff Elbow</a> (2004)
 <li><a href="Fantagraphics135.jpg">Wuvable Oaf</a> (2015)
 <li><a href="../JoeSacco/JoeSacco.html">Yahoo</a> (1988)
+<li><a href="Fantagraphics427.jpg">Yeah!</a> (2011)
 <li><a href="Fantagraphics148.jpg">You'll Never Know</a> (2009)
 <li><a href="../Zap/zap.html">Zap</a> (2016)
 <li><a href="Fantagraphics136.jpg">Zero Zero</a> (1995)
